--- a/index.html
+++ b/index.html
@@ -9,11 +9,76 @@
           maximum-scale=1.0,
           minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
+  <section class="card" data-qa="card">
+    <div class="card__main-image">
+      <img
+        src="images/imac.jpeg" alt="APPLE A1419 iMac 27' Retina 5K (MNED2UA/A)"
+        title="APPLE A1419 iMac 27' Retina 5K (MNED2UA/A)"
+        id="main-image">
+    </div>
+    <div class="card__content">
+      <div class="card__title">
+        <p class="card__name">
+          Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)
+        </p>
+        <p class="card__text">
+         Код товара: 195434
+      </p>
+      </div>
+      <div class="card__rating">
+        <div class="card__stars">
+          <div class="rating-stars">
+            <img
+              src="images/star-active.svg"
+              alt="4 stars"
+              title="rating">
+            </div>
+          <div class="rating-stars">
+            <img
+              src="images/star-active.svg"
+              alt="4 stars"
+              title="rating">
+          </div>
+          <div class="rating-stars">
+            <img
+              src="images/star-active.svg"
+              alt="4 stars"
+              title="rating">
+          </div>
+          <div class="rating-stars">
+            <img
+              src="images/star-active.svg"
+              alt="4 stars"
+              title="rating">
+          </div>
+          <div class="rating-stars">
+            <img
+              src="images/star.svg" alt="4 stars"
+              title="rating">
+          </div>
+        </div>
+        <div class="card__text">Отзывов: 5</div>
+      </div>
+      <div class="card__prise">
+        <div class="card__text">
+          Цена:
+        </div>
+        <div class="card__prise_amount">
+          69 999 грн
+        </div>
+      </div>
+      <div class="card__buying">
+        <a href="#main-image" class="card__buying_link">
+         КУПИТЬ
+        </a>
+      </div>
+    </div>
+  </section>
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
